etc/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pipax-dev
  labels:
    name: service-app
