etc/k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-app
  name: service
  namespace: pipax-dev
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30357
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: service-app
  sessionAffinity: None
  type: NodePort
